# sistema_de_vendas

./: .env  clientes.csv  database.db  database.py  main.py  produtos.csv  pyproject.toml  requirements.txt
Context/: database.py
Models/: models.py  models_bd.py
Utils/: utils.py
routers/: cliente_routes.py  pedido_routes.py  produto_routes.py
