[project]
name = "sistema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.3",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
]
